--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 .content {
     max-width: 800px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 
 .header__title {
@@ -49,7 +50,7 @@ body {
     align-items: center;
     margin-bottom: 30px;
     font-size: 12px;
-    padding: 8px 15px;
+    padding: 5px;
     border: 2px solid var(--border-color);
     border-radius: 20px;
 }
@@ -58,8 +59,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
 }
 
 .quiz-topbar__item-current {
@@ -91,6 +92,18 @@ body {
     margin: 8px 0;
 }
 
+.quiz-question__label {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.quiz-question__input {
+    width: 16px;
+    height: 16px;
+    margin-right: 10px;
+}
+
 .button {
     font: 700 14px/32px 'Roboto';
     white-space: nowrap;
@@ -112,4 +125,5 @@ body {
 .button:disabled  {
     opacity: .5;
 }
+
 
