--- a/styles/vars.css
+++ b/styles/vars.css
@@ -14,6 +14,15 @@
     --quiz-incorect-variant: #d90000;
     --quiz-incorect-variant-border: #eaaaad;
     --quiz-corect-variant-border: #bbd4a5;
+
+    --quiz-result-layout-bg: #222;
+    --quiz-result-buttons-bg: #4c4b4b;
+    --quiz-result-layout-color: #7a7a7a;
+    --quiz-result-layout-second-color: #ffffff;
+
+    --indicator-junior: #ffc800;
+    --indicator-middle: #ff7b00;
+    --indicator-senior: #9a0f09;
 }
 
 /* A class added to the <html> element*/
