--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ body {
     background: no-repeat url("./images/indicator.svg");
 }
 
-.quiz-result-indicator__indicator::after {
+.quiz-result-indicator__arrow {
     position: absolute;
     bottom: 2px;
     left: 51px;
@@ -208,7 +208,7 @@ body {
     transform-origin: 100% 50%;
     transform: rotate(0deg);
     background: #d8d8d8;
-    content: "";
+
 }
 
 .quiz-result__buttons {
