--- a/styles/vars.css
+++ b/styles/vars.css
@@ -5,6 +5,7 @@
 
     --active-elem-bg: #f8ab47;
     --active-elem-color: #fff;
+    --data-length-color: #a9a9a9;
 
     --btn-color: #fff;
     --btn-bg-color: #51a06c;
